# mriagent

./: .env  GEMINI.md  README.md  fallos.txt  investigacion_stroke_mri.bib  main.py  pyproject.toml
src/: agents.py  crew.py  tasks.py
src/tools/: analysis_tools.py  api_key_tools.py  arxiv_tools.py  bibtex_tools.py  crossref_tools.py  pubmed_tools.py  summary_tools.py
